@@ -44,6 +44,9 @@ typedef enum {
 	TRACKER_DB_MANAGER_REMOVE_CACHE  = 1 << 2,
 } TrackerDBManagerFlags;
 
+#define TRACKER_DB_FOR_FILE_SERVICE	"Files"
+#define TRACKER_DB_FOR_EMAIL_SERVICE	"Emails"
+#define TRACKER_DB_FOR_XESAM_SERVICE	"Xesam"
 
 GType        tracker_db_get_type                            (void) G_GNUC_CONST;
 
