@@ -1,5 +1,15 @@
 2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>
 
+	* src/trackerd/tracker-search.c:
+	* src/trackerd/tracker-files.c:
+	* src/trackerd/tracker-xesam-live-search.c:
+	* src/trackerd/tracker-xesam-manager.c:
+	* src/libtracker-db/tracker-db-manager.h:
+
+	Replaced a few strings with defines
+
+2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>
+
 	* src/tracker-indexer/tracker-indexer-db.c:
 	* src/tracker-indexer/tracker-indexer-db.h:
 	* src/tracker-indexer/tracker-indexer.c:
